syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.idkidknow.mcrealcomm.api.grpc";
option java_outer_classname = "RealityCommunicationProto";

package mcrealcomm;

service ChatService {
  rpc SubscribeChat (stream Empty) returns (stream ChatComponent);
  rpc BroadcastMessage (Message) returns (Empty);
}

message Empty {}

message ChatComponent {
  string json = 1;
  string translated_text = 2; // Server side translated text
}

message Message {
  oneof message {
    string literal = 1;
    string component_json = 2;
  }
}
